--- a/ShoppingList/MainWindow.xaml
+++ b/ShoppingList/MainWindow.xaml
@@ -3,9 +3,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="MainWindow" Height="442" Width="345">
     <Grid>
-        <TextBox x:Name="InputBox" HorizontalAlignment="Left" Height="37" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="207" Margin="10,22,0,0" FontSize="18"/>
-        <TextBox HorizontalAlignment="Left" Height="307" Margin="10,64,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="289"/>
-        <Button x:Name="NewValue" Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="77" Margin="222,28,0,0" Height="31"/>
-        <Button Content="Print" HorizontalAlignment="Left" Margin="222,376,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.845,0.948" Height="31"/>
+        <TextBox x:Name="InputBox" HorizontalAlignment="Left" Height="27" TextWrapping="Wrap" Text="Add Item..." VerticalAlignment="Top" Width="207" Margin="10,32,0,0" FontSize="18" SpellCheck.IsEnabled="True" RenderTransformOrigin="0.527,1.904"/>
+        <Button x:Name="NewValue" Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="77" Margin="222,32,0,0" Height="27"/>
+        <Button Content="Print" HorizontalAlignment="Left" Margin="222,358,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.845,0.948" Height="31"/>
+        <TextBlock x:Name="OutputBox" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.819,3.988" Margin="12,64,0,0" Height="289" Width="287" FontSize="16" Text="1.&#x9;"/>
     </Grid>
 </Window>
