--- a/ShoppingList/MainWindow.xaml
+++ b/ShoppingList/MainWindow.xaml
@@ -5,8 +5,8 @@
     <Grid>
         <TextBox x:Name="InputBox" HorizontalAlignment="Left" Height="27" TextWrapping="Wrap" VerticalAlignment="Top" Width="207" Margin="10,32,0,0" FontSize="18" SpellCheck.IsEnabled="True" RenderTransformOrigin="0.527,1.904" AutoWordSelection="True" KeyDown="OnKeyDownHandler"/>
         <Button x:Name="AddValue" Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="77" Margin="222,32,0,0" Height="27"/>
-        <Button Content="Print" HorizontalAlignment="Left" Margin="222,358,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.845,0.948" Height="31"/>
+        <Button Content="Print" HorizontalAlignment="Left" Margin="222,358,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.845,0.948" Height="31" Click="Button_Click"/>
         <Label x:Name="NewLabel" Content="New Item" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="76" FontSize="14" FontWeight="Bold"/>
-        <TextBlock x:Name="TextOutput" HorizontalAlignment="Left" Margin="10,64,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="289" Width="287"/>
+        <ListBox x:Name="TextOutput" HorizontalAlignment="Left" Height="267" Margin="10,86,0,0" VerticalAlignment="Top" Width="287"/>
     </Grid>
 </Window>
