--- a/ShoppingList/MainWindow.xaml
+++ b/ShoppingList/MainWindow.xaml
@@ -1,12 +1,12 @@
 ﻿<Window x:Class="MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="MainWindow" Height="442" Width="345">
+    Title="Stop @ the Damn Store" Height="442" Width="345">
     <Grid>
-        <TextBox x:Name="InputBox" HorizontalAlignment="Left" Height="27" TextWrapping="Wrap" VerticalAlignment="Top" Width="207" Margin="10,32,0,0" FontSize="18" SpellCheck.IsEnabled="True" RenderTransformOrigin="0.527,1.904" AutoWordSelection="True" KeyDown="OnKeyDownHandler"/>
-        <Button x:Name="AddValue" Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="77" Margin="222,32,0,0" Height="27"/>
-        <Button Content="Print" HorizontalAlignment="Left" Margin="222,358,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.845,0.948" Height="31" Click="Button_Click"/>
-        <Label x:Name="NewLabel" Content="New Item" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="76" FontSize="14" FontWeight="Bold"/>
+        <TextBox x:Name="InputBox" HorizontalAlignment="Left" Height="27" TextWrapping="Wrap" VerticalAlignment="Top" Width="207" Margin="10,44,0,0" FontSize="18" SpellCheck.IsEnabled="True" RenderTransformOrigin="0.527,1.904" AutoWordSelection="True" KeyDown="OnKeyDownHandler"/>
+        <Button x:Name="AddValue" Content="Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="77" Margin="222,44,0,0" Height="27"/>
+        <Button x:Name="EmailBut" Content="Email" HorizontalAlignment="Left" Margin="222,358,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.845,0.948" Height="31" Click="Button_Click"/>
+        <Label x:Name="NewLabel" Content="New Item" HorizontalAlignment="Left" Margin="5,20,0,0" VerticalAlignment="Top" Width="76" FontWeight="Bold" RenderTransformOrigin="0.526,-0.243" FontSize="10" Foreground="#FFBD2121"/>
         <ListBox x:Name="TextOutput" HorizontalAlignment="Left" Height="267" Margin="10,86,0,0" VerticalAlignment="Top" Width="287"/>
     </Grid>
 </Window>
